--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -12,6 +12,7 @@
       display: flex;
       justify-content: space-between;
       border-bottom: 1px solid darkgrey;
+
   
       .header-block {
         text-transform: capitalize;
@@ -27,5 +28,17 @@
       margin-top: 30px;
       margin-left: auto;
       font-size: 36px;
+    }
+
+    button {
+      margin-left: auto;
+      margin-top: 50px;
+    }
+
+    .test-warning {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 24px;
+      color: red;
     }
   }
